# lychee

./: Cargo.toml
.github/workflows/: docker.yml
lychee-bin/: Cargo.toml
lychee-bin/src/: main.rs
lychee-bin/src/commands/: check.rs  dump.rs
lychee-bin/tests/: cli.rs
lychee-lib/: Cargo.toml
lychee-lib/src/: client.rs  collector.rs  extract.rs  lib.rs
lychee-lib/src/filter/: mod.rs
lychee-lib/src/types/: input.rs  uri.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
